fix: temporary hamburger menu overflow fix

--- a/style.css
+++ b/style.css
@@ -869,14 +869,6 @@ video {
   z-index: 1000000;
 }
 
-.order-1 {
-  order: 1;
-}
-
-.-order-1 {
-  order: -1;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -901,6 +893,22 @@ video {
 
 .mt-1 {
   margin-top: 0.25rem;
+}
+
+.-mt-12 {
+  margin-top: -3rem;
+}
+
+.-mt-10 {
+  margin-top: -2.5rem;
+}
+
+.-mt-6 {
+  margin-top: -1.5rem;
+}
+
+.-mt-7 {
+  margin-top: -1.75rem;
 }
 
 .box-border {
@@ -1036,6 +1044,10 @@ video {
   width: 100%;
 }
 
+.w-\[80vw\] {
+  width: 80vw;
+}
+
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -1134,12 +1146,12 @@ video {
   scroll-snap-align: start;
 }
 
-.grid-cols-artist-article {
-  grid-template-columns: 1fr 24.1rem;
-}
-
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-artist-article {
+  grid-template-columns: 1fr 24.1rem;
 }
 
 .flex-row-reverse {
@@ -1202,6 +1214,10 @@ video {
   gap: 0.75rem;
 }
 
+.gap-32 {
+  gap: 8rem;
+}
+
 .gap-6 {
   gap: 1.5rem;
 }
@@ -1212,10 +1228,6 @@ video {
 
 .gap-\[6px\] {
   gap: 6px;
-}
-
-.gap-32 {
-  gap: 8rem;
 }
 
 .overflow-hidden {
@@ -1405,6 +1417,11 @@ video {
   padding-bottom: 3rem;
 }
 
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1425,11 +1442,6 @@ video {
   padding-bottom: 8rem;
 }
 
-.py-40 {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
-}
-
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -1438,11 +1450,6 @@ video {
 .py-9 {
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
-}
-
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
 }
 
 .pl-10 {
@@ -1550,13 +1557,6 @@ video {
   font-size: 5.61rem;
   line-height: 110%;
   letter-spacing: 0.01em;
-  font-weight: 700;
-}
-
-.text-heading-xs {
-  font-size: 1.333rem;
-  line-height: 140%;
-  letter-spacing: 0em;
   font-weight: 700;
 }
 
@@ -2035,6 +2035,11 @@ input::placeholder {
     width: 100%;
   }
 
+  .sm\:-translate-y-1\/2 {
+    --tw-translate-y: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
   .sm\:flex-row {
     flex-direction: row;
   }
@@ -2171,10 +2176,6 @@ input::placeholder {
     gap: 2.25rem;
   }
 
-  .md\:gap-32 {
-    gap: 8rem;
-  }
-
   .md\:border-l-0 {
     border-left-width: 0px;
   }
@@ -2212,11 +2213,6 @@ input::placeholder {
   .md\:py-32 {
     padding-top: 8rem;
     padding-bottom: 8rem;
-  }
-
-  .md\:py-16 {
-    padding-top: 4rem;
-    padding-bottom: 4rem;
   }
 
   .md\:text-left {
@@ -2270,10 +2266,6 @@ input::placeholder {
 
   .lg\:items-end {
     align-items: flex-end;
-  }
-
-  .lg\:gap-16 {
-    gap: 4rem;
   }
 
   .lg\:gap-32 {
